--- a/index.html
+++ b/index.html
@@ -25,5 +25,19 @@
         </nav>
       </div>
     </header>
+
+    <main class="introduction-bg">
+      <div class="introduction">
+        <div class="introduction-content">
+          <h1>Bicicletas feitas sob medida<span>.</span></h1>
+          <p>
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a href="./bicicletas.html">Escolha a sua</a>
+        </div>
+        <img src="./img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta" />
+      </div>
+    </main>
   </body>
 </html>
