--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Bikcraft - Bicicletas Elétricas</title>
   </head>
   <body>
@@ -17,7 +23,7 @@
         <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
 
         <nav aria-label="primária">
-          <ul class="header-menu">
+          <ul class="header-menu color-0">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
@@ -29,15 +35,24 @@
     <main class="introduction-bg">
       <div class="introduction">
         <div class="introduction-content">
-          <h1>Bicicletas feitas sob medida<span>.</span></h1>
-          <p>
+          <h1 class="big-text color-0">
+            Bicicletas feitas sob medida<span class="color-p1">.</span>
+          </h1>
+          <p class="medium-text color-5">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a href="./bicicletas.html">Escolha a sua</a>
+          <a class="button" href="./bicicletas.html">Escolha a sua</a>
         </div>
-        <img src="./img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta" />
+        <div>
+          <img
+            src="./img/fotos/introducao.jpg"
+            alt="Bicicleta Elétrica Preta"
+          />
+        </div>
       </div>
     </main>
+
+    <h2 class="big-text">escolha a sua<span class="color-p1">.</span></h2>
   </body>
 </html>
