--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
 
         <nav aria-label="primária">
-          <ul class="header-menu color-0">
+          <ul class="header-menu font-1-m color-0">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
@@ -35,10 +35,10 @@
     <main class="introduction-bg">
       <div class="introduction">
         <div class="introduction-content">
-          <h1 class="big-text color-0">
+          <h1 class="font-1-xxl color-0">
             Bicicletas feitas sob medida<span class="color-p1">.</span>
           </h1>
-          <p class="medium-text color-5">
+          <p class="font-2-l color-5">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
@@ -53,6 +53,32 @@
       </div>
     </main>
 
-    <h2 class="big-text">escolha a sua<span class="color-p1">.</span></h2>
+    <article class="bikes-list">
+      <h2 class="font-1-xxl">escolha a sua<span class="color-p1">.</span></h2>
+
+      <ul>
+        <li>
+          <a href="./bikes/magic.html">
+            <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Magic Might</h3>
+            <span class="font-2-m">R$ 2499</span>
+          </a>
+        </li>
+        <li>
+          <a href="./bikes/nimbus.html">
+            <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Nimbus Stark</h3>
+            <span class="font-2-m">R$ 4999</span>
+          </a>
+        </li>
+        <li>
+          <a href="./bikes/nebula.html">
+            <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
+            <h3 class="font-1-xl">Nebula Cosmic</h3>
+            <span class="font-2-m">R$ 3499</span>
+          </a>
+        </li>
+      </ul>
+    </article>
   </body>
 </html>
