--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
     <title>Bikcraft - Bicicletas Elétricas</title>
   </head>
   <body>
     <header class="header-bg">
-      <div class="header">
+      <div class="header container">
         <a href="./"><img src="./img/bikcraft.svg" alt="Bikcraft" /></a>
 
         <nav aria-label="primária">
@@ -33,7 +33,7 @@
     </header>
 
     <main class="introduction-bg">
-      <div class="introduction">
+      <div class="introduction container">
         <div class="introduction-content">
           <h1 class="font-1-xxl color-0">
             Bicicletas feitas sob medida<span class="color-p1">.</span>
@@ -54,31 +54,111 @@
     </main>
 
     <article class="bikes-list">
-      <h2 class="font-1-xxl">escolha a sua<span class="color-p1">.</span></h2>
+      <h2 class="font-1-xxl container">
+        escolha a sua<span class="color-p1">.</span>
+      </h2>
 
       <ul>
         <li>
           <a href="./bikes/magic.html">
             <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Magic Might</h3>
-            <span class="font-2-m">R$ 2499</span>
+            <span class="font-2-m color-8">R$ 2499</span>
           </a>
         </li>
         <li>
           <a href="./bikes/nimbus.html">
             <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Nimbus Stark</h3>
-            <span class="font-2-m">R$ 4999</span>
+            <span class="font-2-m color-8">R$ 4999</span>
           </a>
         </li>
         <li>
           <a href="./bikes/nebula.html">
             <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta" />
             <h3 class="font-1-xl">Nebula Cosmic</h3>
-            <span class="font-2-m">R$ 3499</span>
+            <span class="font-2-m color-8">R$ 3499</span>
           </a>
         </li>
       </ul>
     </article>
+
+    <article class="technology-bg">
+      <div class="technology container">
+        <div class="technology-content">
+          <span class="font-2-l-b color-5">Tecnologia Avançada</span>
+          <h2 class="font-1-xxl color-0">
+            Você escolhe as suas cores e componentes<span class="color-p1"
+              >.</span
+            >
+          </h2>
+          <p class="font-2-l color-5">
+            Cada Bikcraft é única e possui a sua identidade. As medidas serão
+            exatas para o seu corpo e altura, garantindo maior conforto e
+            ergonomia na sua pedalada. Você pode também personalizar
+            completamente as suas cores.
+          </p>
+          <a class="link" href="./bikes.html"> Escolha um modelo</a>
+          <div class="technology-vantagem">
+            <div>
+              <img src="./img/icones/eletrica.svg" alt="" />
+              <h3 class="font-1-m color-0">Motor Elétrico</h3>
+              <p class="font-2-s color-5">
+                Toda Bikcraft é equipada com um motor elétrico que possui
+                duração de até 120h. A bateria é recarregada com a sua energia
+                gasta ao pedalar.
+              </p>
+            </div>
+            <div>
+              <img src="./img/icones/rastreador.svg" alt="" />
+              <h3 class="font-1-m color-0">Rastreador</h3>
+              <p class="font-2-s color-5">
+                Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos
+                rastreadores e sistemas anti-furto para garantir o seu sossego.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="technology-img">
+          <img src="./img/fotos/tecnologia.jpg" alt="" />
+        </div>
+      </div>
+    </article>
+
+    <section class="parceiros" aria-label="Nossos Parceiros">
+      <h2 class="font-1-xxl container">
+        nossos parceiros<span class="color-p1">.</span>
+      </h2>
+
+      <ul>
+        <li><img src="./img/parceiros/caravan.svg" alt="caravan" /></li>
+        <li><img src="./img/parceiros/ranek.svg" alt="ranek" /></li>
+        <li><img src="./img/parceiros/handel.svg" alt="handel" /></li>
+        <li><img src="./img/parceiros/dogs.svg" alt="dogs" /></li>
+        <li><img src="./img/parceiros/lescone.svg" alt="lescone" /></li>
+        <li><img src="./img/parceiros/flexblog.svg" alt="flexblog" /></li>
+        <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast" /></li>
+        <li><img src="./img/parceiros/surfbot.svg" alt="surfbot" /></li>
+      </ul>
+    </section>
+
+    <section class="depoimento" aria-label="Depoimento">
+      <div>
+        <img
+          src="./img/fotos/depoimento.jpg"
+          alt="Pessoa pedalando uma bicicleta Bikcraft"
+        />
+      </div>
+      <div class="depoimento-content">
+        <blockquote class="font-1-xl color-p5">
+          <p>
+            Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez
+            foi intensificar o meu amor por esta atividade. Recomendo à todos
+            que amo.
+          </p>
+        </blockquote>
+        <span class="font-1-m-b color-p4"> Ana Júlia </span>
+      </div>
+    </section>
   </body>
 </html>
