--- a/index.html
+++ b/index.html
@@ -160,5 +160,84 @@
         <span class="font-1-m-b color-p4"> Ana Júlia </span>
       </div>
     </section>
+
+    <article class="seguros-bg">
+      <div class="seguros container">
+        <h2 class="font-1-xxl color-0">
+          seguros <span class="color-p1">.</span>
+        </h2>
+        <div class="seguros-item">
+          <h3 class="font-1-xl color-6">PRATA</h3>
+          <span class="font-1-xl color-0"
+            >R$ 199 <span class="font-1-xs color-6">mensal</span></span
+          >
+          <ul class="font-2-m color-0">
+            <li>Duas trocas por ano</li>
+            <li>Assistência técnica</li>
+            <li>Suporte 08h às 18h</li>
+            <li>Cobertura estadual</li>
+          </ul>
+          <a class="button second" href="./orcamento.html">Inscreva-se</a>
+        </div>
+        <div class="seguros-item">
+          <h3 class="font-1-xl color-p1">OURO</h3>
+          <span class="font-1-xl color-0"
+            >R$ 299 <span class="font-1-xs color-6">mensal</span></span
+          >
+          <ul class="font-2-m color-0">
+            <li>Cinco trocas por ano</li>
+            <li>Assistência especial</li>
+            <li>Suporte 24h</li>
+            <li>Cobertura nacional</li>
+            <li>Desconto em parceiros</li>
+            <li>Acesso ao Clube Bikcraft</li>
+          </ul>
+          <a class="button" href="./orcamento.html">Inscreva-se</a>
+        </div>
+      </div>
+    </article>
+
+    <footer class="footer-bg">
+      <div class="footer container">
+        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+        <div class="footer-contact">
+          <h3 class="font-2-l-b color-0">Contato</h3>
+          <ul class="font-2-m color-5">
+            <li><a href="tel:+55 219999-9999">+55 219999-9999</a></li>
+            <li>
+              <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
+            </li>
+            <li>Rua Ali Perto, 22 - Botafogo</li>
+            <li>Rio de Janeiro - RJ</li>
+          </ul>
+          <div class="footer-social">
+            <a href="./"
+              ><img src="./img/redes/instagram.svg" alt="Instagram"
+            /></a>
+            <a href="./"
+              ><img src="./img/redes/facebook.svg" alt="Facebook"
+            /></a>
+
+            <a href="./">
+              <img src="./img/redes/youtube.svg" alt="Youtube" />
+            </a>
+          </div>
+        </div>
+        <div class="footer-info">
+          <h3 class="font-2-l-b color-0">INFORMAÇÕES</h3>
+          <nav>
+            <ul class="font-1-m color-5">
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./termos.html">Termos e Condições</a></li>
+            </ul>
+          </nav>
+        </div>
+        <p class="footer-copy font-2-m color-6">
+          Bikcraft © Alguns direitos reservados.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
