--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -39,9 +39,9 @@
       </div>
       <div class="bicicleta container">
         <div class="bicicleta-imagem">
-          <img src="../img/bicicleta/nimbus3.jpg" alt="" />
-          <img src="../img/bicicleta/nimbus2.jpg" alt="" />
-          <img src="../img/bicicleta/nimbus1.jpg" alt="" />
+          <img src="../img/bicicleta/nimbus3.jpg" alt="bicicleta branca" />
+          <img src="../img/bicicleta/nimbus2.jpg" alt="bicicleta preta" />
+          <img src="../img/bicicleta/nimbus1.jpg" alt="bicicleta preta" />
         </div>
         <div class="bicicleta-conteudo">
           <p class="font-2-l color-5">
@@ -50,7 +50,11 @@
             velocidade.
           </p>
           <div class="bicicleta-comprar">
-            <a class="button" href="../orcamento.html">Comprar agora</a>
+            <a
+              class="button"
+              href="../orcamento.html?tipo=bikcraft&produto=nebula"
+              >Comprar agora</a
+            >
             <span class="font-1-xs color-6">
               <img src="../img/icones/entrega.svg" alt="" /> entrega em 5 dias
             </span>
@@ -189,5 +193,6 @@
         </p>
       </div>
     </footer>
+    <script src="../js/script.js"></script>
   </body>
 </html>
