optimized for production

--- a/seguros.html
+++ b/seguros.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Seguros" />
-    <link rel="preload" href="./css/style.css" as="style" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +15,9 @@
       rel="stylesheet"
     />
     <title>Seguros | Bikcraft</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body id="seguros">
     <header class="header-bg">
@@ -42,7 +46,7 @@
       </div>
 
       <div class="seguros container">
-        <div class="seguros-item">
+        <div class="seguros-item fadeInLeft" data-anime="200">
           <h3 class="font-1-xl color-6">PRATA</h3>
           <span class="font-1-xl color-0"
             >R$ 199 <span class="font-1-xs color-6">mensal</span></span
@@ -59,7 +63,7 @@
             >Inscreva-se</a
           >
         </div>
-        <div class="seguros-item">
+        <div class="seguros-item fadeInRight" data-anime="400">
           <h3 class="font-1-xl color-p1">OURO</h3>
           <span class="font-1-xl color-0"
             >R$ 299 <span class="font-1-xs color-6">mensal</span></span
@@ -333,6 +337,7 @@
         </p>
       </div>
     </footer>
+    <script src="./js/plugins/simple-anime.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
