--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Termos e Condições" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml" />
+
+    <link rel="preload" href="../css/style.min.css" as="style" />
+    <link rel="stylesheet" href="../css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,11 +16,14 @@
       rel="stylesheet"
     />
     <title>Magic Might | Bikcraft</title>
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body id="bicicleta">
     <header class="header-bg">
       <div class="header container">
-        <a href="./"><img src="../img/bikcraft.svg" alt="Bikcraft" /></a>
+        <a href="../"><img src="../img/bikcraft.svg" alt="Bikcraft" /></a>
 
         <nav aria-label="primária">
           <ul class="header-menu font-1-m color-0">
