--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
-    <link rel="preload" href="./css/style.css" as="style" />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,6 +19,10 @@
       rel="stylesheet"
     />
     <title>Bikcraft - Bicicletas Elétricas</title>
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
   <body>
     <header class="header-bg">
@@ -39,17 +44,19 @@
     <main class="introduction-bg">
       <div class="introduction container">
         <div class="introduction-content">
-          <h1 class="font-1-xxl color-0">
+          <h1 class="font-1-xxl color-0 fadeInDown" data-anime="200">
             Bicicletas feitas sob medida<span class="color-p1">.</span>
           </h1>
-          <p class="font-2-l color-5">
+          <p class="font-2-l color-5 fadeInDown" data-anime="400">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para o cliente. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a class="button" href="./bicicletas.html">Escolha a sua</a>
+          <a class="button fadeInDown" data-anime="600" href="./bicicletas.html"
+            >Escolha a sua</a
+          >
         </div>
 
-        <picture>
+        <picture data-anime="800" class="fadeInDown">
           <source
             media="(max-width: 800px)"
             srcset="./img/bicicletas/nimbus.jpg"
@@ -351,6 +358,8 @@
         </p>
       </div>
     </footer>
+
+    <script src="./js/plugins/simple-anime.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
