--- a/contato.html
+++ b/contato.html
@@ -107,6 +107,7 @@
                 id="email"
                 name="email"
                 placeholder="example@mail.com"
+                required
               />
             </div>
 
@@ -236,5 +237,6 @@
       </div>
     </footer>
     <script src="./js/script.js"></script>
+    <script src="./js/formulario.js"></script>
   </body>
 </html>
