--- a/orcamento.html
+++ b/orcamento.html
@@ -217,7 +217,7 @@
 
           <div class="col-2">
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" />
+            <input type="email" id="email" name="email" required />
           </div>
 
           <h2 class="font-1-xs color-9 col-2">entrega</h2>
@@ -307,6 +307,8 @@
         </p>
       </div>
     </footer>
+    <script src="./js/formulario.js"></script>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
